test_programs/compile_failure/noirc_frontend_tests_visibility_errors_on_use_of_private_exported_item/src/main.nr

    mod foo {
        mod bar {
            pub fn baz() {}
        }

        use bar::baz;

        pub fn qux() {
            baz();
        }
    }

    fn main() {
        foo::baz();
    }
    